--- a/onliner-clone/src/Style/header.css
+++ b/onliner-clone/src/Style/header.css
@@ -1,8 +1,33 @@
-.header__top{
+.header__top {
   display: flex;
   justify-content: space-between;
 }
-.header__info-widget{
+.header__info-widget {
   display: flex;
   gap: 5px;
+}
+.header__bottom {
+  display: flex;
+}
+.header__bottom h1 {
+  padding-left: 50px;
+  background-image: url(../assets/Offline_logo.svg);
+  background-repeat: no-repeat;
+  background-size: 32px 32px;
+  background-position: 12px 50%;
+}
+
+.header__bottom input {
+  background-image: url('/src/assets/search-icon.svg');
+  background-repeat: no-repeat;
+  background-size: 18px 18px;
+  background-position: 12px 50%;
+}
+.header__bottom input::before {
+  content: '❤';
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  left: -20px;
+  top: 0;
 }
