--- a/onliner-clone/src/Style/swiper.css
+++ b/onliner-clone/src/Style/swiper.css
@@ -14,12 +14,15 @@
 .swiper-slide img {
   display: block;
   width: 100%;
-  height: 10em;
+  height: 7em;
   object-fit: cover;
   object-position: top;
 }
-.card-body{
-  padding: 0.85rem;
+.card-body {
+  padding: 0.3rem;
+  display: flex;
+  justify-content: center;
+  gap: 5px;
 }
 .card-category {
   color: var(--bs-gray-600);
@@ -35,7 +38,7 @@
 }
 .card-price {
   font-size: 0.82em;
-  margin-bottom: 0.5em;
+  margin-bottom: 0;
   color: red;
   font-weight: bolder;
 }
